--- a/css/diagnostics.css
+++ b/css/diagnostics.css
@@ -829,9 +829,10 @@ button {
   padding: 30px;
   border-radius: 10px;
 }
-@media screen and (max-width: 100px) {
+@media screen and (max-width: 1000px) {
   .equipments .equipment-item__image {
-    height: 300px;
+    height: -moz-max-content;
+    height: max-content;
   }
 }
 .equipments .equipment-item__image a {
@@ -869,59 +870,43 @@ button {
 
 .licenses {
   margin-top: 100px;
-  margin-bottom: 95px;
+}
+@media screen and (max-width: 768px) {
+  .licenses {
+    margin-top: 50px;
+  }
 }
 .licenses-title {
+  font-family: "Montserrat";
   font-size: 36px;
+  font-weight: 700;
 }
-.licenses-content {
-  display: flex;
-  justify-content: space-between;
+@media screen and (max-width: 768px) {
+  .licenses-title {
+    font-size: 28px;
+  }
+}
+.licenses .slide-content {
   margin-top: 100px;
+  width: 90%;
+  padding-bottom: 70px;
+  overflow: hidden;
+  margin-left: auto;
+  margin-right: auto;
 }
-@media screen and (max-width: 500px) {
-  .licenses-content {
-    width: 300px;
-    overflow-y: auto;
+@media screen and (max-width: 768px) {
+  .licenses .slide-content {
+    margin-top: 50px;
   }
 }
-.licenses-content img {
-  width: 22%;
+.licenses .slide-content .swiper-horizontal > .swiper-pagination-bullets,
+.licenses .slide-content .swiper-pagination-bullets.swiper-pagination-horizontal,
+.licenses .slide-content .swiper-pagination-custom,
+.licenses .slide-content .swiper-pagination-fraction {
+  bottom: var(--swiper-pagination-bottom, 20px);
 }
-@media screen and (max-width: 500px) {
-  .licenses-content img {
-    width: 80%;
-  }
-}
-.licenses .place-for-pagination {
-  margin-top: 110px;
-  display: flex;
-  align-items: center;
-  color: #000000;
-  cursor: pointer;
-}
-@media screen and (max-width: 500px) {
-  .licenses .place-for-pagination {
-    margin-top: 30px;
-  }
-}
-.licenses .place-for-pagination svg path {
-  stroke: #000000;
-}
-.licenses .place-for-pagination p {
-  padding: 10px;
-  display: flex;
-  align-items: center;
-  font-size: 24px;
-  font-weight: 500;
-}
-.licenses .place-for-pagination .line {
-  display: block;
-  width: 200px;
-  height: 2px;
-  background: #000000;
-  margin-left: 15px;
-  margin-right: 15px;
+.licenses .slide-content .swiper-slide {
+  padding: 15px;
 }
 
 .information {
