--- a/css/labaratory.css
+++ b/css/labaratory.css
@@ -853,81 +853,43 @@ button {
 
 .licenses {
   margin-top: 100px;
-  margin-bottom: 90px;
 }
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 768px) {
   .licenses {
     margin-top: 50px;
-    margin-bottom: 50px;
   }
 }
 .licenses-title {
+  font-family: "Montserrat";
   font-size: 36px;
+  font-weight: 700;
 }
 @media screen and (max-width: 768px) {
   .licenses-title {
-    width: 3px;
-    height: 15px;
+    font-size: 28px;
   }
 }
-.licenses-content {
-  display: flex;
-  justify-content: space-between;
+.licenses .slide-content {
   margin-top: 100px;
+  width: 90%;
+  padding-bottom: 70px;
+  overflow: hidden;
+  margin-left: auto;
+  margin-right: auto;
 }
-@media screen and (max-width: 1100px) {
-  .licenses-content {
+@media screen and (max-width: 768px) {
+  .licenses .slide-content {
     margin-top: 50px;
   }
 }
-@media screen and (max-width: 500px) {
-  .licenses-content {
-    width: 300px;
-    overflow-y: auto;
-  }
+.licenses .slide-content .swiper-horizontal > .swiper-pagination-bullets,
+.licenses .slide-content .swiper-pagination-bullets.swiper-pagination-horizontal,
+.licenses .slide-content .swiper-pagination-custom,
+.licenses .slide-content .swiper-pagination-fraction {
+  bottom: var(--swiper-pagination-bottom, 20px);
 }
-.licenses-content img {
-  width: 22%;
-}
-@media screen and (max-width: 500px) {
-  .licenses-content img {
-    width: 80%;
-  }
-}
-.licenses .place-for-pagination {
-  margin-top: 110px;
-  display: flex;
-  align-items: center;
-  color: #000000;
-  cursor: pointer;
-}
-@media screen and (max-width: 11000px) {
-  .licenses .place-for-pagination {
-    margin-top: 50px;
-  }
-}
-@media screen and (max-width: 500px) {
-  .licenses .place-for-pagination {
-    margin-top: 30px;
-  }
-}
-.licenses .place-for-pagination svg path {
-  stroke: #000000;
-}
-.licenses .place-for-pagination p {
-  padding: 10px;
-  display: flex;
-  align-items: center;
-  font-size: 24px;
-  font-weight: 500;
-}
-.licenses .place-for-pagination .line {
-  display: block;
-  width: 200px;
-  height: 2px;
-  background: #000000;
-  margin-left: 15px;
-  margin-right: 15px;
+.licenses .slide-content .swiper-slide {
+  padding: 15px;
 }
 
 .analysis-description {
