--- a/scss/labaratory.scss
+++ b/scss/labaratory.scss
@@ -164,79 +164,42 @@
 
 .licenses {
   margin-top: 100px;
-  margin-bottom: 90px;
 
-  @media screen and (max-width: 1100px) {
+  @media screen and (max-width: 768px) {
     margin-top: 50px;
-    margin-bottom: 50px;
   }
 
   &-title {
+    font-family: "Montserrat";
     font-size: 36px;
+    font-weight: 700;
 
     @media screen and (max-width: 768px) {
-      width: 3px;
-      height: 15px;
+      font-size: 28px;
     }
   }
 
-  &-content {
-    display: flex;
-    justify-content: space-between;
+  .slide-content {
     margin-top: 100px;
+    width: 90%;
+    padding-bottom: 70px;
+    overflow: hidden;
+    margin-left: auto;
+    margin-right: auto;
 
-    @media screen and (max-width: 1100px) {
+    @media screen and (max-width: 768px) {
       margin-top: 50px;
     }
 
-    @media screen and (max-width: 500px) {
-      width: 300px;
-      overflow-y: auto;
+    .swiper-horizontal > .swiper-pagination-bullets,
+    .swiper-pagination-bullets.swiper-pagination-horizontal,
+    .swiper-pagination-custom,
+    .swiper-pagination-fraction {
+      bottom: var(--swiper-pagination-bottom, 20px);
     }
 
-    img {
-      width: 22%;
-
-      @media screen and (max-width: 500px) {
-        width: 80%;
-      }
-    }
-  }
-
-  .place-for-pagination {
-    margin-top: 110px;
-    display: flex;
-    align-items: center;
-    color: #000000;
-    cursor: pointer;
-
-    @media screen and (max-width: 11000px) {
-      margin-top: 50px;
-    }
-
-    @media screen and (max-width: 500px) {
-      margin-top: 30px;
-    }
-
-    svg path {
-      stroke: #000000;
-    }
-
-    p {
-      padding: 10px;
-      display: flex;
-      align-items: center;
-      font-size: 24px;
-      font-weight: 500;
-    }
-
-    .line {
-      display: block;
-      width: 200px;
-      height: 2px;
-      background: #000000;
-      margin-left: 15px;
-      margin-right: 15px;
+    .swiper-slide{
+      padding: 15px;
     }
   }
 }
