--- a/scss/feedback.scss
+++ b/scss/feedback.scss
@@ -237,6 +237,8 @@
 
         @media screen and (max-width: 500px) {
           padding: 20px 30px;
+          width: 100%;
+          justify-content: center;
         }
       }
     }
@@ -256,8 +258,8 @@
       @media screen and (max-width: 500px) {
         margin-top: 20px;
         margin-left: 0;
-        width: 45%;
-        text-align: center;
+        width: 100%;
+        justify-content: center;
       }
 
       input {
