--- a/scss/home-page.scss
+++ b/scss/home-page.scss
@@ -8,6 +8,23 @@
   transition: all 1 linear;
 }
 
+.mySwiper1 {
+  overflow: hidden;
+}
+
+@keyframes opacity {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
 .main {
   height: 90vh;
   position: relative;
@@ -58,7 +75,7 @@
     }
 
     &__text {
-      width: 50%;
+      width: 55%;
       margin-top: 20px;
       font-family: Montserrat;
       font-size: 24px;
@@ -78,10 +95,14 @@
       align-items: center;
       color: #ffffff;
       cursor: pointer;
-      margin-top: 320px;
+      margin-top: 120px;
 
       @media screen and (max-width: 1400px) {
         margin-top: 100px;
+      }
+
+      @media screen and (max-width: 1000px) {
+        margin-top: 50px;
       }
 
       @media screen and (max-width: 768px) {
@@ -91,18 +112,47 @@
       }
 
       p {
-        padding: 10px 20px;
+        padding: 13px 50px;
         display: flex;
         align-items: center;
         font-size: 24px;
         font-weight: 500;
 
-        @media screen and (max-width: 1024px) {
-          padding: 10px;
-        }
-
         @media screen and (max-width: 768px) {
           font-size: 20px;
+          padding: 16px 50px;
+        }
+      }
+
+      .swiper-button-next,
+      .swiper-button-prev {
+        color: white;
+        animation: 5s opacity infinite linear;
+        top: unset;
+      }
+
+      .swiper-button-prev {
+        margin-top: 3px;
+
+        &::after {
+          font-size: 25px;
+          font-weight: bold;
+        }
+      }
+      .swiper-button-next {
+        right: auto;
+        margin-top: 3px;
+        margin-left: 480px;
+        @media screen and (max-width: 1000px) {
+          margin-left: 380px;
+        }
+        @media screen and (max-width: 768px) {
+          margin-left: 320px;
+        }
+
+        &::after {
+          font-size: 25px;
+          font-weight: bold;
         }
       }
 
@@ -113,13 +163,14 @@
         background: #ffffff;
         margin-left: 30px;
         margin-right: 40px;
+        animation: 5s opacity infinite linear;
 
-        @media screen and (max-width: 1400px) {
+        @media screen and (max-width: 1000px) {
           width: 200px;
         }
 
         @media screen and (max-width: 768px) {
-          width: 100px;
+          // width: 100px;
           margin: 0 10px;
         }
       }
@@ -142,7 +193,7 @@
       display: flex;
       justify-content: flex-end;
 
-      @media screen and (max-width: 768px) {
+      @media screen and (max-width: 500px) {
         display: none;
       }
 
@@ -151,6 +202,10 @@
 
         @media screen and (max-width: 1400px) {
           width: 60%;
+        }
+
+        @media screen and (max-width: 768px) {
+          width: 100%;
         }
       }
     }
@@ -670,6 +725,7 @@
     .swiper-pagination-custom,
     .swiper-pagination-fraction {
       bottom: var(--swiper-pagination-bottom, 20px);
+      animation: 2s opacity infinite linear;
     }
 
     .swiper-wrapper {
@@ -679,6 +735,13 @@
 
     .swiper-slide {
       padding: 15px;
+    }
+
+    .swiper-button-prev,
+    .swiper-button-next {
+      top: var(--swiper-navigation-top-offset, 55%);
+      animation: 2s opacity infinite linear;
+      transition: opacity 0.3s ease;
     }
   }
 }
@@ -739,7 +802,7 @@
     &__subtitle {
       font-family: "Montserrat";
       font-size: 24px;
-      font-weight: 500;
+      font-weight: 600;
       line-height: 38px;
       margin-top: 20px;
       color: rgba(0, 0, 0, 0.5);
@@ -760,8 +823,9 @@
       border-radius: 10px;
       color: #ffffff;
       background-color: transparent;
-      border: 1px solid #ffffff;
+      border: 2px solid #ffffff;
       cursor: pointer;
+      animation: 1.5s opacity infinite linear;
 
       @media screen and (max-width: 768px) {
         margin-top: 20px;
