--- a/css/sales.css
+++ b/css/sales.css
@@ -109,7 +109,7 @@ button {
 }
 @media screen and (max-width: 500px) {
   .header .show-contact {
-    transform: translateY(440px);
+    transform: translateY(480px);
     font-size: 16px;
     flex-direction: column;
     align-items: center;
@@ -171,7 +171,7 @@ button {
 }
 @media screen and (max-width: 500px) {
   .header .show-buttons {
-    transform: translateY(340px);
+    transform: translateY(380px);
   }
   .header .show-buttons a {
     padding: 5px;
@@ -273,6 +273,9 @@ button {
   }
 }
 .header-links .navigation-links li:hover a {
+  color: #01a1b7;
+}
+.header-links .navigation-links li .active {
   color: #01a1b7;
 }
 .header-links .navigation-links .active.menu-link::before {
@@ -377,6 +380,11 @@ button {
 .header-links .navigation-language .other-languages a img {
   margin: 0 5px;
 }
+@media screen and (max-width: 500px) {
+  .header-links .navigation-language .other-languages a img {
+    margin: 0 9px;
+  }
+}
 
 .open-menu {
   position: fixed;
@@ -402,11 +410,6 @@ button {
 .open-menu .navigation-links li {
   font-size: 16px;
   margin-top: 10px;
-}
-@media screen and (max-width: 500px) {
-  .open-menu .navigation-links li {
-    margin-top: 5px;
-  }
 }
 @media screen and (max-width: 500px) {
   .open-menu .navigation-input {
@@ -726,12 +729,16 @@ button {
 .sales-main__wrapper {
   width: 100%;
   background: #01a1b7;
+  margin-top: 100px;
+}
+.sales-main__wrapper .mySwiper-main {
+  overflow: hidden;
 }
 
 .sales-main {
   display: flex;
   padding: 30px 0 40px;
-  margin-top: 125px;
+  position: relative;
 }
 @media screen and (max-width: 768px) {
   .sales-main {
@@ -791,30 +798,109 @@ button {
   }
 }
 .sales-main .main-content .place-for-pagination {
-  margin-bottom: 20px;
   display: flex;
   align-items: center;
   color: #ffffff;
   cursor: pointer;
+  margin-top: 120px;
+}
+@media screen and (max-width: 1400px) {
+  .sales-main .main-content .place-for-pagination {
+    margin-top: 100px;
+  }
+}
+@media screen and (max-width: 1000px) {
+  .sales-main .main-content .place-for-pagination {
+    margin-top: 50px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .sales-main .main-content .place-for-pagination {
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
 }
 .sales-main .main-content .place-for-pagination p {
-  padding: 10px;
+  padding: 13px 50px;
   display: flex;
   align-items: center;
   font-size: 24px;
   font-weight: 500;
+}
+@media screen and (max-width: 768px) {
+  .sales-main .main-content .place-for-pagination p {
+    font-size: 20px;
+    padding: 16px 35px;
+  }
+}
+.sales-main .main-content .place-for-pagination .swiper-button-next,
+.sales-main .main-content .place-for-pagination .swiper-button-prev {
+  color: white;
+  animation: 5s opacity infinite linear;
+  top: unset;
+}
+.sales-main .main-content .place-for-pagination .swiper-button-prev {
+  margin-top: 3px;
+  left: unset;
+}
+.sales-main .main-content .place-for-pagination .swiper-button-prev::after {
+  font-size: 25px;
+  font-weight: bold;
+}
+.sales-main .main-content .place-for-pagination .swiper-button-next {
+  right: auto;
+  margin-top: 3px;
+  margin-left: 480px;
+}
+@media screen and (max-width: 1000px) {
+  .sales-main .main-content .place-for-pagination .swiper-button-next {
+    margin-left: 380px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .sales-main .main-content .place-for-pagination .swiper-button-next {
+    margin-left: 300px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .sales-main .main-content .place-for-pagination .swiper-button-next {
+    margin-left: 250px;
+  }
+}
+.sales-main .main-content .place-for-pagination .swiper-button-next::after {
+  font-size: 25px;
+  font-weight: bold;
 }
 .sales-main .main-content .place-for-pagination .line {
   display: block;
   width: 300px;
   height: 3px;
   background: #ffffff;
-  margin-left: 15px;
-  margin-right: 15px;
+  margin-left: 30px;
+  margin-right: 40px;
+  animation: 5s opacity infinite linear;
+}
+@media screen and (max-width: 1000px) {
+  .sales-main .main-content .place-for-pagination .line {
+    width: 200px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .sales-main .main-content .place-for-pagination .line {
+    margin: 0 10px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .sales-main .main-content .place-for-pagination .line {
+    width: 150px;
+  }
 }
 .sales-main__image {
   margin-left: 130px;
-  transform: translateY(40px);
+  position: absolute;
+  right: 0;
+  bottom: 0;
   background-image: radial-gradient(#ffffff, #ffffff, #01a1b7, #01a1b7);
 }
 @media screen and (max-width: 1100px) {
