--- a/scss/sales.scss
+++ b/scss/sales.scss
@@ -33,12 +33,17 @@
 .sales-main__wrapper {
   width: 100%;
   background: #01a1b7;
+  margin-top: 100px;
+
+  .mySwiper-main{
+    overflow: hidden;
+  }
 }
 
 .sales-main {
   display: flex;
   padding: 30px 0 40px;
-  margin-top: 125px;
+  position: relative;
 
   @media screen and (max-width: 768px) {
     padding: 20px 0;
@@ -94,18 +99,73 @@
     }
 
     .place-for-pagination {
-      margin-bottom: 20px;
       display: flex;
       align-items: center;
       color: #ffffff;
       cursor: pointer;
+      margin-top: 120px;
+
+      @media screen and (max-width: 1400px) {
+        margin-top: 100px;
+      }
+
+      @media screen and (max-width: 1000px) {
+        margin-top: 50px;
+      }
+
+      @media screen and (max-width: 768px) {
+        width: 100%;
+        margin-top: 20px;
+        margin-bottom: 20px;
+      }
 
       p {
-        padding: 10px;
+        padding: 13px 50px;
         display: flex;
         align-items: center;
         font-size: 24px;
         font-weight: 500;
+
+        @media screen and (max-width: 768px) {
+          font-size: 20px;
+          padding: 16px 35px;
+        }
+      }
+
+      .swiper-button-next,
+      .swiper-button-prev {
+        color: white;
+        animation: 5s opacity infinite linear;
+        top: unset;
+      }
+
+      .swiper-button-prev {
+        margin-top: 3px;
+        left: unset;
+
+        &::after {
+          font-size: 25px;
+          font-weight: bold;
+        }
+      }
+      .swiper-button-next {
+        right: auto;
+        margin-top: 3px;
+        margin-left: 480px;
+        @media screen and (max-width: 1000px) {
+          margin-left: 380px;
+        }
+        @media screen and (max-width: 768px) {
+          margin-left: 300px;
+        }
+        @media screen and (max-width: 500px) {
+          margin-left: 250px;
+        }
+
+        &::after {
+          font-size: 25px;
+          font-weight: bold;
+        }
       }
 
       .line {
@@ -113,15 +173,29 @@
         width: 300px;
         height: 3px;
         background: #ffffff;
-        margin-left: 15px;
-        margin-right: 15px;
+        margin-left: 30px;
+        margin-right: 40px;
+        animation: 5s opacity infinite linear;
+
+        @media screen and (max-width: 1000px) {
+          width: 200px;
+        }
+
+        @media screen and (max-width: 768px) {
+          margin: 0 10px;
+        }
+        @media screen and (max-width: 500px) {
+          width: 150px;
+        }
       }
     }
   }
 
   &__image {
     margin-left: 130px;
-    transform: translateY(40px);
+    position: absolute;
+    right: 0;
+    bottom: 0;
     background-image: radial-gradient(#ffffff, #ffffff, #01a1b7, #01a1b7);
 
     @media screen and (max-width: 1100px) {
@@ -368,7 +442,7 @@
       bottom: var(--swiper-pagination-bottom, 20px);
     }
 
-    .swiper-slide{
+    .swiper-slide {
       padding: 15px;
     }
   }
